CSS: Align list .add-new-component button correctly

--- a/public/css/common.less
+++ b/public/css/common.less
@@ -67,3 +67,7 @@
 .object-tags-table {
   color: @text-color-light;
 }
+
+.full-width .add-new-component {
+  margin: 0 0 1em 1em;
+}
